--------------------------------------------------------------------------------
Fusion 1.209 - January ??, 2004
--------------------------------------------------------------------------------

- 02-01-04: Added Sage Skill Spell Breaker. [Darkhelmet]
- 02-01-04: Added Sage Skill Cast Cancel. [Darkhelmet]
- 02-01-04: Fixed #where command where it doesnt send you the location of the other player. [Mitch]
- 01-31-04: Fixed Raid, to be used when hidden as well as Backstab. Added Skill error -[Oatmeal]
- 01-31-04: FIxed call spirits level determiens how many you have at a time-[Oatmeal]
- 01-31-04: Fixed bug where people couldnt move. [Mitch]
- 01-31-04: DataSave now saves mapinfo_db also, to save PvP and GPvP Settings from GMs. [Mitch]
- 01-31-04: Added GM PvP and GPvP commands. [Mitch]
- 01-30-04: Added GM Command: #where [Mitch]
- 01-30-04: Updated Envenom in pVp. [Darkhelmet]
- 01-30-04: Fixed cannot hurt party members in pVp. [Darkhelmet]
- 01-30-04: Fixed GOlden Thief Bug Card. [Darkhelmet]
- 01-30-04: Updated scripts to use a scriptlabel's OnInit. [Colus]
- 01-30-04: Enabled guild flags. [Colus]
- 01-30-04: Added support for guild territories. [Colus]
- 01-29-04: Added garment card effects. [Colus]
- 01-29-04: Fixed #117 - Turning off "Act Dead" doesn't display on other people's screens. [AlexKreuz]
- 01-29-04: Fixed #113 - Archer Type Monsters can not attack through walls anymore. [AlexKreuz]
- 01-29-04: Added email validation to -pword command. [Mitch]
- 01-29-04: Fixed bug #394: Sends "Party already exists" to a novice whose basic skill level isnt 7 yet. [Mitch]
- 01-29-04: Added new GM Command: #revive playernamehere - Used to revive other players! [Mitch]
- 01-29-04: Updated message sending for -server and -users to send the correct message length instead of just 256 or 200. [Mitch]
- 01-29-04: Added messages for -pword command for errors and successfully password change. [Mitch]