@@ -69,9 +69,20 @@ begin
     if tp.Pass = userpass then begin
 
         if tp.Login = 1 then begin
-            WFIFOW(0, $0081);
-            WFIFOB(2, 08);
-            Socket.SendBuf(buf, 3);
+            count := 0;
+
+            while count < 8 do begin
+                if (tp.CData[count] <> nil)and(tp.CData[count].Login <> 0) then begin
+                    WFIFOW(0, $0081);
+                    WFIFOB(2, 08);
+                    Socket.SendBuf(buf, 3); // AlexKreuz: Fix Double Login Crash
+                    //DebugOut.Lines.Add('Double Login.');
+                    tp.Login := 0; // AlexKreuz
+                    tp.CData[count].Login := 0; // AlexKreuz
+                    //tp.CData[count] := nil;
+                end;
+                inc(count);
+            end;
         end;
 
         tp.IP := Socket.RemoteAddress;
